--- a/data/machine_vars.yaml
+++ b/data/machine_vars.yaml
@@ -1,6 +1,3 @@
 player1_score:
   expire: !!null 'null'
-  value: 674850
-player2_score:
-  expire: !!null 'null'
-  value: 668750
+  value: 4116850
