--- a/modes/bonus/config/bonus.yaml
+++ b/modes/bonus/config/bonus.yaml
@@ -3,16 +3,20 @@ mode:
   priority: 20000
   
 mode_settings:
-  display_delay_ms: 2s
+  display_delay_ms: 1500
   hurry_up_delay_ms: 0
+  keep_multiplier: false
   bonus_entries:
   - event: bonus_items
     score: 1000
     player_score_entry: bonus_items
+  - event: world_jackpot
+    score: current_player.world_jackpot_base
 
 slide_player:
    mode_bonus_started: bonus_start_slide
    bonus_items: bonus_items_slide
+   world_jackpot: world_jackpot_slide
    bonus_total: bonus_total_slide
 
 slides:
@@ -39,6 +43,21 @@ slides:
         y: 200
         anchor_x: center
         anchor_y: bottom
+  world_jackpot_slide:
+      widgets:
+        - type: text
+          text: (score)
+          number_grouping: true
+          min_digits: 2
+          font_name: lazer84
+          font_size: 100
+        - type: text
+          text: World Jackpot Base
+          font_name: lazer84
+          font_size: 50
+          y: 200
+          anchor_x: center
+          anchor_y: bottom
   bonus_total_slide:
     widgets:
       - type: text
