--- a/config/config.yaml
+++ b/config/config.yaml
@@ -80,18 +80,28 @@ switches:
   s_collectitem1:
     number: A1-B1-7
     tags: playfield_active
+    ignore_window_ms: 100
+    debounce: normal
   s_collectitem2:
     number: A1-B1-6
     tags: playfield_active
+    ignore_window_ms: 100
+    debounce: normal
   s_collectitem3:
     number: A1-B1-5
     tags: playfield_active
+    ignore_window_ms: 100
+    debounce: normal
   s_collectitem4:
     number: A1-B1-4
     tags: playfield_active
+    ignore_window_ms: 100
+    debounce: normal
   s_collectitem5:
     number: A1-B1-3
     tags: playfield_active
+    ignore_window_ms: 100
+    debounce: normal
  
 #P2 - Bank 0
   s_plungerlane:
@@ -1398,7 +1408,6 @@ modes:
   - lightoverlay
   - skillshot
   - outlanegate
-  - worldcontroller
   - world1
   - world2
   - world3
