--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -39,7 +39,7 @@ shots:
     show_tokens:
       leds: l_collectitem3
     enable_events: collectitem_special_enabled
-    disable_events: collectitem2_special_disabled
+    disable_events: collectitem_special_disabled
   collectitem3:
     switch: s_collectitem4
     show_tokens:
@@ -67,6 +67,8 @@ event_player:
     item_collected
   collectitem5_hit:
     item_collected
+
+  #ENABLE VILLAGER MULTIBALL 
   logicblock_counter_villagermultiball_complete:
     villagermultiball_ready
 
@@ -94,19 +96,19 @@ event_player:
     nightmode_start
 
   
-  #ENABLE NIGHTMODE
-  world1_collected:
-    nightmode_ready
-  world2_collected:
-    nightmode_ready
-  world3_collected:
-    nightmode_ready
-  world4_collected:
-    nightmode_ready
-  world5_collected:
-    nightmode_ready
-  world6_collected:
-    nightmode_ready
+  #ENABLE NIGHTMODE - Now done in Diverter Control
+  #world1_collected:
+   # nightmode_ready
+  #world2_collected:
+    #nightmode_ready
+  #world3_collected:
+    #nightmode_ready
+  #world4_collected:
+    #nightmode_ready
+  #world5_collected:
+    #nightmode_ready
+
+  
 
   #COMPLETE WORLDS WHEN NIGHT MODE STARTS
   multiball_nightmb_started{current_player.world_id==1}:
@@ -120,6 +122,7 @@ event_player:
   multiball_nightmb_started{current_player.world_id==5}:
     world5_completed
 
+  #=========== CONTROLS WHEN WORLDS ARE STARTED ============
   #START WORLD 1
   mode_base_started{current_player.world_id==0}:
     world1_start
@@ -136,14 +139,18 @@ event_player:
   multiball_nightmb_ended{current_player.world_id==5}:
     world6_start
 
-  
+  #DISABLE AND RE-ENABLE NIGHT MODE ON VILLAGER TANGENT
+  # night mode disabled / ready is re-enabled in diverter control
+
 counters:
    counter_villagermultiball:
       count_events: spinner_hit
       starting_count: 0
       count_interval: 1
       count_complete_value: 20
-      restart_events: multiball_villagermb_ended, ball_started
+      restart_events: multiball_nightmb_ended,multiball_villagermb_ended, ball_started
+      disable_events: nightmode_ready
+      enable_events: ball_started
       persist_state: true
 
 multiball_locks:
@@ -152,13 +159,13 @@ multiball_locks:
      locked_ball_counting_strategy: physical_only
      lock_devices: bd_topkicker 
      enable_events: villagermultiball_ready
-     disable_events: villagermultiball_start
+     disable_events: villagermultiball_start, nightmode_ready
    nightlock:
      balls_to_lock: 1
      locked_ball_counting_strategy: physical_only
      lock_devices: bd_scoop 
      enable_events: nightmode_ready
-     disable_events: nightmode_start
+     disable_events: nightmode_start, nightmode_disable
 
 multiballs:
    villagermb:
@@ -190,6 +197,9 @@ variable_player:
     world_jackpot_base:  #RESET WORLD JACKPOT BASE
       int: 10000
       action: set
+    world_jackpot_items:  #RESET WORLD JACKPOT ITEMS
+      int: 0
+      action: set
   multiball_villagermb_started: #VILLAGER MULTIBALL STARTED
     multiplier_mb:
       int: 2
@@ -206,7 +216,7 @@ variable_player:
       action: set
 
   world_jackpot_hit:
-    score: current_player.world_jackpot_base
+    score: current_player.world_jackpot
     world_jackpot_base:
       int: 10000
       action: set
@@ -451,7 +461,7 @@ achievements:
 achievement_groups:
   worlds:
     achievements: world1, world2, world3, world4, world5, world6
-    start_selected_events: world_start, world1_start, world2_start, world3_start, world5_start, world6_start
+    start_selected_events: world_start, world1_start, world2_start, world3_start, world4_start, world5_start, world6_start
     events_when_enabled: mission_rotator_ready
     auto_select: true
     enable_while_no_achievement_started: true
