--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -165,8 +165,6 @@ event_player:
 # WE WILL CONTROL ALL DIVERTER CONTROL ACTIVITIES HERE     
 #======================================================
 
-
-
   world1_started:
     divertercontrol_checkworldstate
   world1_collected:
@@ -205,20 +203,21 @@ event_player:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
   
- 
-  
-
   #>> Village Multiball Return All Items Collected (World Collected)
   divertercontrol_checkworldstate{current_player.multiplier_mb==2}:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
-  divertercontrol_checkworldstate{current_player.multiplier_mb==1 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
+    nightmode_disable
+  divertercontrol_checkworldstate{current_player.world_id > 0 and current_player.multiplier_mb==1 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
     divertercontrol_leftloop_travel
     divertercontrol_rightloop_enable
+    nightmode_ready
+
   #>> Village Multiball Return Not All Items Collected (World Started)
   divertercontrol_checkworldstate{current_player.multiplier_mb==1 and (current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0)}:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
+    nightmode_disable
 
   #Night Mode Tangent
 
@@ -227,9 +226,6 @@ event_player:
   multiball_nightmb_ended:
     divertercontrol_checkworldstate
 
-  #nightmode_ready:
-  #  divertercontrol_leftloop_close
-  #  divertercontrol_rightloop_enable
   nightmode_start:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
