--- a/modes/world3/config/world3.yaml
+++ b/modes/world3/config/world3.yaml
@@ -1,6 +1,6 @@
 #config_version=5
 mode:
-    start_events: award_world3
+    start_events: world3_started
     stop_events: world3_completed
     priority: 500
 
@@ -11,12 +11,12 @@ show_player:
       speed: 1
 
 sound_player:
-  world_started:
+  mode_world3_started:
     world3mode_music:
       action: play
       loops: -1
       mode_end_action: stop
-  multiball_villagermb_ended:
+  mode_villagermb_ended:
     world3mode_music:
       action: play
       loops: -1
@@ -79,8 +79,90 @@ variable_player:
     world_item4_needed:
       int: 3
       action: set
-  
+
+  logicblock_wc3_item1_counter_updated:
+    world_item1_remaining:
+      int: value
+      action: set
+  logicblock_wc3_item2_counter_updated:
+    world_item2_remaining:
+      int: value
+      action: set
+  logicblock_wc3_item3_counter_updated:
+    world_item3_remaining:
+      int: value
+      action: set
+  logicblock_wc3_item4_counter_updated:
+    world_item4_remaining:
+      int: value
+      action: set
+
+counters:
+  wc3_item1_counter:
+    count_events: collectitem1_hit
+    reset_on_complete: False
+    starting_count: 3
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w3_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: mode_world3_started
+  wc3_item2_counter:
+    count_events: collectitem2_hit
+    reset_on_complete: False
+    starting_count: 3
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w3_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: mode_world3_started
+  wc3_item3_counter:
+    count_events: collectitem3_hit
+    reset_on_complete: False
+    starting_count: 3
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w3_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: mode_world3_started
+  wc3_item4_counter:
+    count_events: collectitem4_hit
+    reset_on_complete: False
+    starting_count: 3
+    count_complete_value: 0
+    direction: down
+    persist_state: true
+    events_when_complete: w3_itemcheckcomplete
+    multiple_hit_window: 500ms
+    enable_events: mode_world3_started
 
 event_player:
   mode_world3_started:
-    world_started
+    world3_started
+    w3_itemcheckcomplete
+
+  w3_itemcheckcomplete{current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
+    world3_collected
+
+  w3_itemcheckcomplete{current_player.world_item1_remaining > 0}:
+    collectitem1_enabled
+  w3_itemcheckcomplete{current_player.world_item1_remaining == 0}:
+    collectitem1_disabled
+  
+  w3_itemcheckcomplete{current_player.world_item2_remaining > 0}:
+    collectitem2_enabled
+  w3_itemcheckcomplete{current_player.world_item2_remaining == 0}:
+    collectitem2_disabled
+
+  w3_itemcheckcomplete{current_player.world_item3_remaining > 0}:
+    collectitem3_enabled
+  w3_itemcheckcomplete{current_player.world_item3_remaining == 0}:
+    collectitem3_disabled
+
+  w3_itemcheckcomplete{current_player.world_item4_remaining > 0}:
+    collectitem4_enabled
+  w3_itemcheckcomplete{current_player.world_item4_remaining == 0}:
+    collectitem4_disabled
