--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -143,8 +143,8 @@ event_player:
   ball_starting:
     divertercontrol_checkworldstate
   mode_divertercontrol_started:
-    rightloop_statechange
-    leftloop_statechange
+  #  rightloop_statechange
+  #  leftloop_statechange
     divertercontrol_checkworldstate
   #Left Loop Disabled Events
   timer_leftdropreset_complete{current_player.state_machine_leftloop_state=="closed"}:
@@ -190,7 +190,10 @@ event_player:
   world5_collected:
     divertercontrol_checkworldstate
 
-
+  multiball_villagermb_ended:
+    divertercontrol_checkworldstate
+  multiball_nightmb_ended:
+    divertercontrol_checkworldstate
 
 
   #Villager Multiball Tangent
@@ -198,36 +201,30 @@ event_player:
   villagermultiball_ready:
     divertercontrol_leftloop_disable
     divertercontrol_rightloop_disable
+
   #<< Villager Multiball Started
   villagermultiball_start:
-    divertercontrol_leftloop_close
-    divertercontrol_rightloop_enable
+   divertercontrol_checkworldstate
   
-  #>> Village Multiball Return All Items Collected (World Collected)
+  nightmode_start:
+    divertercontrol_checkworldstate
+  
+  #>> MULTIBALL IS RUNNING (NIGHT OR VILLAGE MULTIBALL)
   divertercontrol_checkworldstate{current_player.multiplier_mb==2}:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
-    nightmode_disable
+  #  nightmode_disable
+
   divertercontrol_checkworldstate{current_player.world_id > 0 and current_player.multiplier_mb==1 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
     divertercontrol_leftloop_travel
     divertercontrol_rightloop_enable
-    nightmode_ready
+   # nightmode_ready
 
   #>> Village Multiball Return Not All Items Collected (World Started)
   divertercontrol_checkworldstate{current_player.multiplier_mb==1 and (current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0)}:
     divertercontrol_leftloop_close
     divertercontrol_rightloop_enable
-    nightmode_disable
+  #  nightmode_disable
 
-  #Night Mode Tangent
 
-  multiball_villagermb_ended:
-    divertercontrol_checkworldstate
-  multiball_nightmb_ended:
-    divertercontrol_checkworldstate
 
-  nightmode_start:
-    divertercontrol_leftloop_close
-    divertercontrol_rightloop_enable
-
-  #Tools Tangent
