--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -124,16 +124,25 @@ event_player:
   multiball_nightmb_ended{current_player.world_id==5}:
     world6_start
 
-  world1_collected:
+  world1_collected{current_player.multiplier_mb==1}:
     nightmode_ready
-  world2_collected:
+    villagermb_disable
+  world2_collected{current_player.multiplier_mb==1}:
     nightmode_ready
-  world3_collected:
+    villagermb_disable
+  world3_collected{current_player.multiplier_mb==1}:
     nightmode_ready
-  world4_collected:
+    villagermb_disable
+  world4_collected{current_player.multiplier_mb==1}:
     nightmode_ready
-  world5_collected:
+    villagermb_disable
+  world5_collected{current_player.multiplier_mb==1}:
     nightmode_ready
+    villagermb_disable
+
+  multiball_villagermb_ended{current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
+    nightmode_ready
+    villagermb_disable
 
 counters:
    counter_villagermultiball:
@@ -142,7 +151,7 @@ counters:
       count_interval: 1
       count_complete_value: 20
       restart_events: multiball_nightmb_ended,multiball_villagermb_ended, ball_started
-      #disable_events: nightmode_ready
+      disable_events: villagermb_disable
       enable_events: ball_started
       persist_state: true
 
@@ -152,7 +161,7 @@ multiball_locks:
      locked_ball_counting_strategy: physical_only
      lock_devices: bd_topkicker 
      enable_events: villagermultiball_ready
-     disable_events: villagermultiball_start, villager_disable
+     disable_events: villagermultiball_start, villagermb_disable
    nightlock:
      balls_to_lock: 1
      locked_ball_counting_strategy: physical_only
@@ -349,13 +358,19 @@ light_player:
     lfeature: off
   spinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
     l_spinner1: green
-  spinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 1000
-    l_spinner2: green
-    l_spinner1: off
-  spinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 1000
-    l_spinner3: green
     l_spinner2: off
+    l_spinner3: off
+    l_spinner4: off
+  spinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 1000
     l_spinner1: off
+    l_spinner2: green
+    l_spinner3: off
+    l_spinner4: off
+  spinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 1000
+    l_spinner1: off
+    l_spinner2: off
+    l_spinner3: green
+    l_spinner4: off
   spinner_hit{device.counters.counter_villagermultiball.value>=16}:
     l_spinner3: off 
     l_spinner2: off 
